kubernetes/apps/kyverno/kyverno/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/CiliumProject/cilium/main/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # Sigstore (TUF, Rekor, Fulcio) for verifyImages keyless cosign
    - toFQDNs:
        - matchName: tuf-repo-cdn.sigstore.dev
        - matchName: rekor.sigstore.dev
        - matchName: fulcio.sigstore.dev
        - matchName: oauth2.sigstore.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Container registries for signature/attestation layer fetches
    - toFQDNs:
        - matchName: ghcr.io
        - matchName: registry.k8s.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
